# sparse-nn-hjb

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Makefile  README.md  pyproject.toml
.github/scripts/: pr_comment.py
.github/workflows/: ci.yml
conf/: config.yaml
conf/data/: pendulum.yaml  vdp.yaml
conf/eval/: global.yaml  region_split.yaml
conf/experiment/: activationsearch.yaml  penaltypowers.yaml  region_split_pendulum.yaml
conf/model/: frac_exp_penalty.yaml  log_penalty.yaml
deploy/: README.md  gcloud-iap-tunnel-bug.md
deploy/terraform/: main.tf  user_data.sh.tftpl  variables.tf
docs/: mlflow.md  research-directions.md
docs/adr/: 0001-self-hosted-mlflow-on-ec2.md  0002-mlflow-as-run-record-backend.md  0005-ci-as-merge-gate.md
docs/research/: CLAIMS.md  CONTEXT.md  NOTATION.md  OVERNIGHT_2026-06-18.md  OVERVIEW.md
experiments/: README.md
experiments/00_openloop/: DIAGNOSIS.md
experiments/03_region_split_pendulum/: README.md  analysis.py  result_codex.md  results.md
experiments/activationsearch/: README.md  analysis.py  results.md
experiments/penaltypowers/: README.md  analysis.py  results.md
experiments/region_split_pendulum/: README.md  analysis.py  results.md
papar/: .gitignore  INDEPENDENT_REVIEW.md  Mthesis.tex  README.md  REVIEW.md  ref.bib
papar/draft/: PROOF_NARROW-CONVERGENCE.tex
scripts/: mlflow_backfill_session.sh  run_pendulum_pmp_openloop_example.py  train.py  upload_run_records_to_mlflow.py
scripts/investigation/: build_region_eval_pool.py  diagnose_restriction_loop.py  make_twosided_oversampling_sets.py  precompute_region_distances.py  proto_bsp.py  (+3 more)
src/: data.py  eval.py  logging_config.py  metric.py  plots.py  plotstyle.py
tests/: test_config.py  test_experiment_logging.py  test_history.py  test_model_contract.py  test_openloop_refactor.py  test_pdap_equivalence.py  test_pendulum_pmp_solver.py  test_semiconcave_model.py
(+104 files in other folders)
