[project]
name = "nnforhjb"
version = "0.1.0"
description = "Sparse neural network training for Hamilton-Jacobi-Bellman equations"
requires-python = ">=3.12"
dependencies = [
    # Core scientific computing
    "numpy>=2.2",
    "scipy>=1.15",
    "shapely>=2.1",
    # Deep learning
    "torch>=2.6",
    # Machine learning
    "scikit-learn>=1.6",
    "mlflow>=2.20",
    # Data analysis
    "pandas>=2.2",
    # Configuration
    "hydra-core>=1.3",
    # Visualization
    "matplotlib>=3.10",
    # Jupyter
    "jupyter>=1.1",
    "ipykernel>=6.29",
    # Tests
    "pytest>=8.3",
    "hydra-joblib-launcher>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["outdated", "rawdata", "notebook", "papar", "deploy"]

[tool.ruff.lint]
# Correctness-focused: pyflakes/pycodestyle errors, bugbear, import sorting.
# E702 stays off — compact `set_xlabel(...); set_ylabel(...)` lines are the
# house idiom in plotting code. B905/B023 stay off — numpy-heavy zips and
# plotting closures over loop variables are pervasive and intentional.
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E702", "B905", "B023", "E741", "E731"]
# Experiment/investigation scripts import after sys.path/mpl.use setup.
[tool.ruff.lint.per-file-ignores]
"experiments/**" = ["E402", "F841"]
"scripts/**" = ["E402"]
# One-off throwaway diagnostics; keep import-order churn out of them.
"scripts/investigation/**" = ["I001"]
"docs/**" = ["E402"]
# mpl.use("Agg") must precede the pyplot import.
"src/plots.py" = ["E402"]
